 * Named pipes and device nodes are no longer included in directory listings
   by default. Use --list-special-files to include them back.
 * Support for timeout in UDP input --udp-timeout=<seconds>
 * New SAT>IP access module, to receive DVB-S via IP networks
 * Improvements on DVB scanning
 * BluRay module can open ISO over network and has full BD-J support

Decoder:
 * OMX GPU-zerocopy support for decoding and display on Android using OpenMax IL
 * Support 4:4:4 and 4:2:2 chroma samplings with VDPAU hw acceleration
 * Support for ARIB STD-B24 subtitles
 * Support for experimental Daala video
 * Support for experimental AV1 video
 * Important improvements for the MMAL decoder and output for rPI and rPI2
 * Support HEVC hardware decoding on Windows, using DxVA2 and D3D11
 * Support hardware decoding using Direct3D11, including GPU-zerocopy mode,
   and hardware filtering, for deinterlace and adjust
 * DxVA2 GPU-zerocopy for hardware decoding and displaying on Windows,
   and support for hardware filtering, for deinterlace and adjust
 * Support HEVC hardware decoding using OMX and MediaCodec (Android)
 * Use MediaCodec via NDK native API after Android Lollipop
 * Support MPEG-2, VC1/WMV3 on Android using MediaCodec
 * Support VP9 and WMV3 decoding using OMX and performance improvements
 * New MPEG-1 & 2 audio layer I, II, III + MPEG 2.5 decoder based on libmpg123
 * New BPG decoder based on libbpg
 * Fixed uncompressed DVD-Audio (AOB) LPCM decoding
 * Rewrite WPL playlists and add ZPL playlists support (Zune)
 * Support TDSC, Canopus HQX, Cineform, SpeedHQ, Pixlet, QDMC and FMVC codecs
 * TTML subtitles support, including EBU-TT-D variant
 * Support 9-bit and 10-bit GBR planar formats
 * New hardware accelerated decoder for OS X and and iOS based on Video Toolbox
   supporting H.263, H.264/MPEG-4 AVC, MPEG-4 Part 2, and DV depending on device
   and OS version
 * Support for the OggSpots video codec
 * HEVC packetization is now correct